--- a/packages/node-plugin/src/generators/preset/files/tsconfig.json.template
+++ b/packages/node-plugin/src/generators/preset/files/tsconfig.json.template
@@ -3,12 +3,12 @@
       "target": "ES6",                       
       "module": "commonjs",                  
       "outDir": "./dist",                    
-      "rootDir": "./",                    
+      "rootDir": "./src",                    
       "strict": true,                        
       "esModuleInterop": true,               
       "skipLibCheck": true,                  
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["/**/*"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
 }
