--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@nx/devkit": "19.5.0",
     "create-nx-workspace": "19.5.0",
+    "enquirer": "^2.4.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
