--- a/packages/create-emumba-node-app/package.json
+++ b/packages/create-emumba-node-app/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "create-nx-workspace": "19.5.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "enquirer": "^2.4.1"
   },
   "type": "commonjs",
   "main": "./src/index.js",
