--- a/packages/node-plugin/src/generators/preset/files/.env.template
+++ b/packages/node-plugin/src/generators/preset/files/.env.template
@@ -2,3 +2,5 @@ PORT=3000
 REDIS_PORT=6379
 REDIS_HOST=127.0.0.1
 MONGO_URI=your_mongo_uri_here
+JWT_SECRET=jsksjnwaahdjahsdhas9hvvvwv
+SESSION_SECRET=fiwafhiwfwhvuwvu9hvvvwv
