--- a/packages/node-plugin/src/generators/preset/files/src/routes/user.routes.ts.template
+++ b/packages/node-plugin/src/generators/preset/files/src/routes/user.routes.ts.template
@@ -1,8 +1,11 @@
 import { Router } from 'express';
-import { getUser } from '../controllers/user.controller';
+import { authenticate } from '../middlewares/auth.middleware';
+import { getUser, login, register } from '../controllers/user.controller';
 
 const router = Router();
 
-router.get('/users', getUser);
+router.get('/users', authenticate, getUser);
+router.post('/login', login);
+router.post('/register', register);
 
 export default router;
