--- a/packages/node-plugin/src/generators/preset/files/app.ts.template
+++ b/packages/node-plugin/src/generators/preset/files/app.ts.template
@@ -3,9 +3,7 @@ import * as path from 'path';
 import * as fs from 'fs';
 const cors = require('cors');
 const dotenv = require('dotenv');
-<% if (userAuth === 'token-based') { %>
-import jwt from 'jsonwebtoken';
-<% } %>
+
 <% if (userAuth === 'session-based') { %>
 import session from 'express-session';
 <% } %>
@@ -39,16 +37,43 @@ app.use(session({
 }));
 <% } %>
 
-// Function to dynamically load routes
-const loadRoutes = (app: Application) => {
-  const routesPath = path.join(__dirname, 'src/routes');
-  fs.readdirSync(routesPath).forEach((file) => {
-    if (file.endsWith('.routes.ts')) {
-      const route = require(path.join(routesPath, file));
-      app.use('/api', route.default); // Set prefix for routes
-    }
-  });
-};
+<% if (architecture === 'monolithic') { %>
+  // Function to dynamically load routes
+  const loadRoutes = (app: Application) => {
+    const routesPath = path.join(__dirname, 'src/routes');
+    fs.readdirSync(routesPath).forEach((file) => {
+      if (file.endsWith('.routes.ts')) {
+        const route = require(path.join(routesPath, file));
+        app.use('/api', route.default); // Set prefix for routes
+      }
+    });
+  };
+<% } else { %>
+  const loadRoutes = (app: Application) => {
+    const modulesPath = path.join(__dirname, 'apps/modules');
+
+    const loadRoutesFromDirectory = (directory: string) => {
+      fs.readdirSync(directory).forEach((fileOrFolder) => {
+        const fullPath = path.join(directory, fileOrFolder);
+        const stat = fs.statSync(fullPath);
+
+        if (stat.isDirectory()) {
+          loadRoutesFromDirectory(fullPath);
+        } else if (fileOrFolder.endsWith('.routes.ts')) {
+          console.log(`Loading route file: ${fullPath}`);
+          try {
+            const route = require(fullPath).default || require(fullPath);
+            app.use('/api', route); // Set prefix for routes
+          } catch (error) {
+            console.error(`Failed to load route file: ${fullPath}`, error);
+          }
+        }
+      });
+    };
+
+    loadRoutesFromDirectory(modulesPath);
+  };
+<% } %>
 
 // Load routes
 loadRoutes(app);
