--- a/packages/node-plugin/src/generators/preset/files/tsconfig.json.template
+++ b/packages/node-plugin/src/generators/preset/files/tsconfig.json.template
@@ -1,15 +1,21 @@
 {
-    "compilerOptions": {
-      "target": "ES6",                       
-      "module": "commonjs",                  
-      "outDir": "./dist",                    
-      "rootDir": "./src",                    
-      "strict": true,                        
-      "esModuleInterop": true,               
-      "skipLibCheck": true,                  
-      "forceConsistentCasingInFileNames": true,
-      "typeRoots": ["./node_modules/@types", "./types"]
-    },
-    "include": ["src/**/*", "types/**/*"],
-    "exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "<%= architecture === 'monolithic' ? 'src' : 'apps' %>", // Set rootDir based on architecture
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./node_modules/@types", "./types"]
+  },
+  "include": [
+    "<%= architecture === 'monolithic' ? 'src/**/*' : 'apps/modules/**/*' %>", // Include paths based on architecture
+    "types/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
