--- a/packages/node-plugin/src/generators/preset/files/app.ts.template
+++ b/packages/node-plugin/src/generators/preset/files/app.ts.template
@@ -1,6 +1,8 @@
-import express, { Application } from 'express';
-import * as path from 'path';
+import express, { Application, Request, Response } from 'express';
 import * as fs from 'fs';
+import redis from './redis';
+import * as path from 'path';
+import mongoose from 'mongoose';
 const cors = require('cors');
 const dotenv = require('dotenv');
 
@@ -36,6 +38,35 @@ app.use(session({
   cookie: { secure: false }
 }));
 <% } %>
+
+app.get('/health', async (req: Request, res: Response) => {
+  try {
+    // Check MongoDB connection
+    const mongoStatus = mongoose.connection.readyState === 1 ? 'connected' : 'disconnected';
+
+    // Check Redis connection
+    const redisStatus = await new Promise((resolve) => {
+      redis.ping((err, result) => {
+        if (err || result !== 'PONG') {
+          resolve('disconnected');
+        } else {
+          resolve('connected');
+        }
+      });
+    });
+
+    // Return health status
+    res.status(200).json({
+      status: 'ok',
+      services: {
+        mongoDB: mongoStatus,
+        redis: redisStatus,
+      },
+    });
+  } catch (err) {
+    res.status(500).json({ status: 'error', message: 'Health check failed', error: err });
+  }
+});
 
 <% if (architecture === 'monolithic') { %>
   // Function to dynamically load routes
